--- a/src/lib/index.css
+++ b/src/lib/index.css
@@ -65,8 +65,8 @@
 }
 
 
-/*----------confirm dialog----------*/
-.dialogBackGrnd {
+/*----------confirm dialog/modal----------*/
+.modalBackGrnd {
     background-color: rgba(0, 0, 0, 0.5);
     width: 100%;
     height: 100vh;
@@ -78,6 +78,20 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.modal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 6;
+
+    padding: 10px;
+    background-color: #f1f1f1;
+    border-radius: 5px;
+    width: fit-content;
+    max-width: 80%;
 }
 
 .dialog {
@@ -106,6 +120,7 @@
     padding: 7px;
     border-radius: 100%;
     cursor: pointer;
+    margin-left: 10px;
 }
 
 .dialogCloseBtn:hover {
@@ -139,4 +154,35 @@
 .dialogNo {
     background-color: rgb(228, 108, 108) !important;
 }
-/*----------confirm dialog----------*/
+/*----------confirm dialog/modal----------*/
+
+
+/*----------pwa install stuffs----------*/
+.pwaInstallBtns {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-top: 10px;
+}
+
+.pwaInstallBtns button {
+    padding: 8px 15px;
+    cursor: pointer;
+    font-size: 13px;
+    border-radius: 5px;
+    border: none;
+    color: white;
+    background-color: #455a64;
+}
+
+.pwaContentLine {
+    display: flex;
+    align-content: center;
+}
+
+.pwaContentLine svg {
+    width: 20px;
+    height: 20px;
+    margin-left: 5px;
+}
+/*----------pwa install stuffs----------*/
