css change to keep dialog above modal

--- a/src/lib/comps/ConfirmDialog.module.css
+++ b/src/lib/comps/ConfirmDialog.module.css
@@ -5,10 +5,10 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 5;
+    z-index: 7;
     display: flex;
     align-items: center;
-    justify-content: center
+    justify-content: center;
 }
 
 .dialog {
@@ -16,11 +16,13 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 6;
+    z-index: 8;
     padding: 10px;
     background-color: #f1f1f1;
     border-radius: 5px;
-    width: 250px
+    min-width: 250px;
+    max-width: 80%;
+    width: fit-content;
 }
 
 .dialogHeader {
@@ -28,7 +30,7 @@
     align-items: flex-start;
     justify-content: space-between;
     font-size: 120%;
-    font-weight: 600
+    font-weight: 600;
 }
 
 .dialogCloseBtn {
@@ -36,25 +38,25 @@
     padding: 7px;
     border-radius: 100%;
     cursor: pointer;
-    margin-left: 10px
+    margin-left: 10px;
 }
 
 .dialogCloseBtn:hover {
-    box-shadow: 1px 1px 5px 1px #ce4747
+    box-shadow: 1px 1px 5px 1px #ce4747;
 }
 
 .dialogContent {
     padding: 5px;
     margin: 5px 0;
     border-top: 1px solid #c5c5c5;
-    background-color: sky
+    background-color: sky;
 }
 
 .dialogBtns {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    margin-top: 10px
+    margin-top: 10px;
 }
 
 .dialogBtns button {
@@ -64,9 +66,9 @@
     border-radius: 5px;
     border: none;
     color: #fff;
-    background-color: #09bf21
+    background-color: #09bf21;
 }
 
 .dialogNo {
-    background-color: #e46c6c !important
+    background-color: #e46c6c !important;
 }
