--- a/src/lib/comps/Modal.module.css
+++ b/src/lib/comps/Modal.module.css
@@ -8,7 +8,7 @@
     z-index: 5;
     display: flex;
     align-items: center;
-    justify-content: center
+    justify-content: center;
 }
 
 .modal {
@@ -20,9 +20,9 @@
     padding: 10px;
     background-color: #f1f1f1;
     border-radius: 5px;
-    width: fit-content;
+    min-width: 250px;
     max-width: 80%;
-    min-width: 200px
+    width: fit-content;
 }
 
 .modalHeader {
@@ -30,7 +30,7 @@
     align-items: flex-start;
     justify-content: space-between;
     font-size: 120%;
-    font-weight: 600
+    font-weight: 600;
 }
 
 .modalCloseBtn {
@@ -38,16 +38,16 @@
     padding: 7px;
     border-radius: 100%;
     cursor: pointer;
-    margin-left: 10px
+    margin-left: 10px;
 }
 
 .modalCloseBtn:hover {
-    box-shadow: 1px 1px 5px 1px #ce4747
+    box-shadow: 1px 1px 5px 1px #ce4747;
 }
 
 .modalContent {
     padding: 5px;
     margin: 5px 0;
     border-top: 1px solid #c5c5c5;
-    background-color: sky
+    background-color: sky;
 }
