arrow in image viewer

--- a/src/lib/comps/ImageViewer.module.css
+++ b/src/lib/comps/ImageViewer.module.css
@@ -11,7 +11,7 @@
     z-index: 100;
     display: flex;
     align-items: center;
-    justify-content: center
+    justify-content: space-between
 }
 
 .imageViewerBg {
@@ -33,4 +33,43 @@
     z-index: 101;
     max-width: 80%;
     max-height: 90%
+}
+
+.arrowBtn {
+    cursor: pointer;
+    filter: invert(100%) sepia(25%) saturate(0%) hue-rotate(253deg) brightness(104%) contrast(101%);
+    z-index: 101;
+    width: 70px;
+    height: 70px
+}
+
+.arrowBtn:hover {
+    transform: translateX(-4px);
+    transition-duration: 300ms
+}
+
+.rightArrow {
+    transform: rotate(180deg)
+}
+
+.rightArrow:hover {
+    transform: translateX(4px) rotate(180deg);
+    transition-duration: 300ms
+}
+
+.disabled {
+    opacity: 0.5;
+    pointer-events: none
+}
+
+.hidden {
+    opacity: 0;
+    pointer-events: none
+}
+
+@media screen and (max-width:800px) {
+    .arrowBtn {
+        width: 30px;
+        height: 30px
+    }
 }
